name:                hnsq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lostlevels/hnsq#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.NSQ
  other-modules:       Network.NSQ.Commands
                     , Network.NSQ.LookupDResponse
                     , Network.NSQ.Packet
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , lens
                     , network
                     , random
                     , text
                     , utf8-string
                     , wreq
  default-language:    Haskell2010
  default-extensions: OverloadedStrings RecordWildCards DeriveGeneric 
source-repository head
  type:     git
  location: https://github.com/lostlevels/hnsq
